<resources>
    <string name="app_name">Godel Driver</string>
    <string name="action_settings">Settings</string>
    <string name="tv_title">Forgot Password</string>
    <string name="btn_text">Submit</string>
    <string name="mobile_number">98545245645</string>
    <string name="booking_history">Booking History</string>
    <string name="notification">Notifications</string>
    <string name="help">Help</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="tv_driver_name">Driver Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs">\u20B9</string>
    <string name="dollar">&#36;</string>
    <string name="double_quote">\"</string>
    <string name="drawer_opened">Open</string>
    <string name="drawer_closed">Close</string>
    <string name="title_activity_maps123">Map</string>
    <string name="NoInternet">No internet connection</string>
    <string name="NoLocation">Make sure your location is activated.</string>
    <string-array name="contriesName">
        <item>Select Country</item>
        <item>Tanzania</item>
        <item>Uganda</item>

    </string-array>
    <string name="alreadyamember">Already a member? Login here</string>
    <string name="email_hint">Email Address</string>
    <string name="Login_using_text">Login Using</string>
    <string name="Driver">Driver</string>
    <string name="Agent">Agent</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="button_signin">Login</string>
    <string name="phone_hint">Phone Number</string>
    <string name="err_msg_email">Email required</string>
    <string name="err_msg_password">Password required</string>
    <string name="err_msg_password_min_length">Password required min 6 chars</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="retrytext">Retry </string>
    <string name="signindialog">SignIn </string>
    <string name="ongoingtext">On Going </string>
    <string name="pickuptext">Pickup </string>
    <string name="deliverytext">Delivery </string>
    <string name="onlinetext">Online </string>
    <string name="offlinetext">Offline </string>
    <string name="pleasetryagain">Please try again </string>
    <string name="oktext">OK </string>
    <string name="canceltextt">Cancel </string>
    <string name="godeldrivertitle">Godel Driver </string>
    <string name="godelAgenttitle">Godel Agent </string>
    <string name="connectingtext">Connected </string>
    <string name="packagepaymentisincomplete">Package payment is incomplete, please pay before proceed. </string>
    <string name="offlineconfirmation">Offline confirmation </string>
    <string name="reallywantoffline">Really want to go offline ? </string>
    <string name="yestext">Yes </string>
    <string name="wanttologout">Do you want to logout? </string>
    <string name="logouttext">Logout </string>
    <string name="assigningstickertext">assigning sticker </string>
    <string name="loadingtext">Loading </string>
    <string name="gettingdetailsdialog">Getting details </string>
    <string name="accountisloginanotherr">This account is login in another device </string>
    <string name="closeapptext">Restart app </string>
    <string name="no_request_ongoing">Currently no ongoing request, you can accept from pickup and delivery tab</string>
    <string name="packageidtext">Package ID</string>
    <string name="packagedetailstext">Package and Customer Details</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="depth">Depth</string>
    <string name="weight">Weight</string>
    <string name="quantity">Quantity</string>
    <string name="estvalue">Est. Value</string>
    <string name="addressnotes">Address Notes</string>
    <string name="pickupnotecolon">Pickup Note :</string>
    <string name="nonoteavailable">No note available</string>
    <string name="deliverynotecolon">Delivery Note :</string>
    <string name="viewmoretext">View more</string>
    <string name="pickupanddelivery">Pickup and Delivery Timing</string>
    <string name="pickupcolonn">Pickup :</string>
    <string name="deliverycolonn">Delivery :</string>
    <string name="bookingtypecolonn">Booking Type :</string>
    <string name="recurringpickuypanddelivery">Recurring Pickup and Delivery Timing</string>
    <string name="recurringtypecolonn">Recurring Type :</string>
    <string name="pickuptimecolon">Pickup Timing  :</string>
    <string name="deliverytimecolon">Delivery :</string>
    <string name="customerdetails">Customer Details</string>
    <string name="namecolonn">Name :</string>
    <string name="emailcolon">Email :</string>
    <string name="phonecolon">Phone :</string>
    <string name="packageisalreadycompleted">Package is already completed</string>
    <string name="pickuppackage">Pickup Package</string>
    <string name="scanpackagelabel">Scan Package Label</string>
    <string name="scanattachsticker">Scan/Attach Sticker</string>
    <string name="scandelivery">SCAN FOR DELIVERY</string>
    <string name="scantext">Scan</string>
    <string name="dropofftext">Drop Off</string>
    <string name="navigationtext">Navigation</string>
    <string name="waitingtext">Waiting</string>
    <string name="pickup_complete">" Picked up \n Completed"</string>
    <string name="dropoff_complete">" Drop off \n Completed"</string>
    <string name="scanpackagewarehouse">Scan package at the warehouse</string>
    <string name="nopickupaddressnote">No pickup address note found</string>
    <string name="nodeliveryaddressnote">No delivery address note found</string>
    <string name="dailytext">Daily</string>
    <string name="weeklytext">Weekly</string>
    <string name="monthlytext">Monthly</string>
    <string name="morningtext">Morning</string>
    <string name="eveningtext">Evening</string>
    <string name="loadingpackages">Loading Packages</string>
    <string name="bookingidcolon">BOOKING ID :</string>
    <string name="statuscolon">Status :</string>
    <string name="completedtextt">Completed</string>
    <string name="usernametext">User Name</string>
    <string name="addressnotecap">ADDRESS NOTE</string>
    <string name="dropoffnotecolon">Dropoff Note :</string>
    <string name="bookingtimecap">BOOKING TIMING</string>
    <string name="recurringdetails">RECURRING DETAILS</string>
    <string name="lengthcolon">Length :</string>
    <string name="widthcolon">Width :</string>
    <string name="depthcolon">Depth :</string>
    <string name="weightcolon">Weight :</string>
    <string name="quantitycolon">Quantity :</string>
    <string name="estvaluecolon">Value : </string>
    <string name="customerdetailscap">CUSTOMER DETAILS</string>
    <string name="idcolon">CUSTOMER ID :</string>
    <string name="mobilenumbercolon">Mobile Number :</string>
    <string name="acceptedtext">Accepted T</string>
    <string name="pendingtext">Pending</string>
    <string name="assignedtext">Assigned</string>
    <string name="arrivingtext">Arriving</string>
    <string name="arrivedtext">Arrived</string>
    <string name="starttext">Start</string>
    <string name="inprogresstext">In Progress</string>
    <string name="waitingbeforetext">Waiting before delivery</string>
    <string name="warehousetext">In warehouse</string>
    <string name="rejectedtext">Rejected</string>
    <string name="deliveryfailuretext">Delv. Failure</string>
    <string name="packagealreadysetongoing">Package already set as OnGoing package</string>
    <string name="calculatingfinaslfare">Calculating final fare</string>
    <string name="documentetxt">Document</string>
    <string name="othertext">other</string>
    <string name="cardpayment">Card</string>
    <string name="walletpayment">Wallet</string>
    <string name="bookingtimingstext">BOOKING TIMINGS</string>
    <string name="checkroutebutton">Check Route</string>
    <string name="bookingidsmalll">Booking Id :</string>
    <string name="packagedetailscap">PACKAGE DETAILS</string>
    <string name="packagetypedocother">Package Type(Document/Other) :</string>
    <string name="paymentdetailscap">PAYMENT DETAILS</string>
    <string name="amountcolon">Amount :</string>
    <string name="methodcolon">Method :</string>
    <string name="signedbycapp">SIGNED BY</string>
    <string name="namewithout">Name :</string>
    <string name="doyouwanttochangepassword">Do you want to change your password? :</string>
    <string name="securityenteroldpassword">For security please enter your old password</string>
    <string name="enteroldpassword">Enter old password</string>
    <string name="newpasswordhint">New password</string>
    <string name="confirmpasswordhint">Confirm password</string>
    <string name="verifybutton">Verify</string>
    <string name="updatepasswordbutton">Update Password</string>
    <string name="changepasswordsmall">Change Password</string>
    <string name="enternewpasswordtext">Enter new password</string>
    <string name="oldpasswordrequirerror">Old password required</string>
    <string name="mincharactersrequired">Min 6 characters required</string>
    <string name="wrongpassworderror">Wrong password</string>
    <string name="newpassworderror">New password required</string>
    <string name="newpassworddifferent">New password must be different</string>
    <string name="confirmpasswordrequirerror">Confirm password required</string>
    <string name="confirmpasswordincorrecterror">Confirm password incorrect</string>
    <string name="resettingpassworddialog">Resetting Password</string>
    <string name="passwordchangeddialog">Password Changed</string>
    <string name="passwordrequiredfurther">Permission required to proceed further</string>
    <string name="allowpemissionstext">Allow permissions</string>
    <string name="exitext">Exit</string>
    <string name="pleasewritedowntext">Please write down the reason</string>
    <string name="captureimagebutton">Capture Image</string>
    <string name="dropofffailuretext">Drop Off Failure</string>
    <string name="reasonrequirederror">Reason required</string>
    <string name="wouldyouliketoproceed">Would you really want to proceed without proof of failure image ?</string>
    <string name="notext">No</string>
    <string name="proceesingdialog">Processing</string>
    <string name="wouldyouliketoreplace">Would you like to continue with same package or replace package?</string>
    <string name="replacetext">Replace</string>
    <string name="forgotyourpassword">Forgot your Password?</string>
    <string name="enteryouremailaddress">Enter your email address below and click on the reset password button</string>
    <string name="enterverificationcode">Enter verification code</string>
    <string name="retypepasswordcode">Retype password</string>
    <string name="resetpasswordtext">Reset Password</string>
    <string name="doyouwanttobacklogin">Do you want to back to LOGIN? </string>
    <string name="passwordchangedlogin">Your password has been successfully updated. You can login with your new passsword.</string>
    <string name="passwordresetsuccessfully">Password Reset Successfully</string>
    <string name="sendingresetlinktextt">sending reset link</string>
    <string name="changepasswordemailsentemail">Change password email has been sent to your email id successfully</string>
    <string name="enterconfirmpassworderror">Enter confirm password</string>
    <string name="signedbysmall">Signed by</string>
    <string name="namewithoutcolon">Name</string>
    <string name="pleasesigninhere">Please sign here</string>
    <string name="clearbutton">clear</string>
    <string name="savebutton">Save</string>
</resources>