<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_gradient">

    <include
        android:id="@+id/toolbar"
        android:visibility="gone"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_25"
                app:srcCompat="@drawable/ic_logo_godel" />

            <TextView
                android:id="@+id/tv_already_member"
                android:layout_marginTop="@dimen/dimen_10"
                android:textColor="@color/whiteColor"
                android:layout_gravity="center"
                android:text="@string/forgotyourpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_verify_text"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="#ff4c4c"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginRight="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />



            <TextView
                android:id="@+id/tv_email_title"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dimen_100"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:textColor="@color/whiteColor"
                android:text="@string/enteryouremailaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/dimen_20"
                app:cardCornerRadius="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_email"
                    android:textColorHint="@color/hintColor"
                    android:layout_marginBottom="@dimen/dimen_5"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:paddingTop="@dimen/dimen_5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_45"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:background="@null"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:padding="@dimen/dimen_8" />


            </androidx.cardview.widget.CardView>




            <EditText
                android:id="@+id/et_verify_code"
                android:visibility="gone"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:cursorVisible="true"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/shape_rectangle"
                android:hint="@string/enterverificationcode"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/dimen_8"/>

            <EditText
                android:id="@+id/et_password"
                android:visibility="gone"
                android:cursorVisible="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/shape_rectangle"
                android:hint="@string/enternewpasswordtext"
                android:inputType="textPassword"
                android:maxLength="30"
                android:padding="@dimen/dimen_8"/>

            <EditText
                android:id="@+id/et_confirm_password"
                android:visibility="gone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/shape_rectangle"
                android:hint="@string/retypepasswordcode"
                android:maxLength="30"
                android:padding="@dimen/dimen_8"/>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45"
                android:layout_marginBottom="@dimen/dimen_20"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/button_corner_radius"
                android:padding="@dimen/dimen_5"
                android:text="@string/resetpasswordtext"
                android:textColor="@color/whiteColor" />

            <TextView
                android:id="@+id/tv_back_login"
                android:padding="@dimen/dimen_5"
                android:layout_marginBottom="@dimen/dimen_45"
                android:textColor="@color/whiteColor"
                android:layout_marginTop="@dimen/dimen_45"
                android:layout_gravity="center"
                android:text="@string/doyouwanttobacklogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@color/colorPrimary"
                android:padding="@dimen/dimen_5"
                android:text="@string/btn_text"
                android:textColor="@color/whiteColor"
                android:visibility="gone" />


            <Button
                android:id="@+id/btn_submit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@color/colorPrimary"
                android:padding="@dimen/dimen_5"
                android:text="@string/btn_text"
                android:textColor="@color/whiteColor"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@color/colorPrimary"
                android:padding="@dimen/dimen_5"
                android:text="@string/button_signin"
                android:textColor="@color/whiteColor"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
