<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RefineCode.RefineActivities.ChangePasswordActivityNew">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_change_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:layout_marginTop="180dp"
                android:text="@string/doyouwanttochangepassword"
                android:textSize="@dimen/font_small" />

            <TextView
                android:id="@+id/tv_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/securityenteroldpassword"
                android:textSize="@dimen/font_small"
                android:textStyle="bold" />


            <!--- Old Password -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_20"
                app:cardBackgroundColor="#F2F2F2"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_45"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:background="@null"
                    android:hint="@string/enteroldpassword"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColorHint="#B1B1B1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_new_confirm_psswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_20"
                android:visibility="gone"
                app:cardBackgroundColor="#F2F2F2"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_45"
                        android:layout_marginLeft="@dimen/dimen_20"
                        android:layout_marginRight="@dimen/dimen_20"
                        android:background="@null"
                        android:hint="@string/newpasswordhint"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:textColorHint="#B1B1B1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#DBDBDB" />

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_45"
                        android:layout_marginLeft="@dimen/dimen_20"
                        android:layout_marginRight="@dimen/dimen_20"
                        android:background="@null"
                        android:hint="@string/confirmpasswordhint"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:textColorHint="#B1B1B1" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Button Verify -->
            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_30"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/button_change_password"
                android:text="@string/verifybutton"
                android:textColor="@color/whiteColor" />

            <!-- Buttton Update Password -->
            <Button
                android:id="@+id/btn_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_30"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/button_change_password"
                android:text="@string/updatepasswordbutton"
                android:textColor="@color/whiteColor"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>