<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/pleasewritedowntext"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_failure_reason"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_white_background"
                android:gravity="top|left"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/iv_failure_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/package_options_bg"
                android:text="@string/captureimagebutton"
                android:textColor="@color/whiteColor" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/package_options_bg"
                android:text="@string/btn_text"
                android:textColor="@color/whiteColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"></View>

        </LinearLayout>
    </ScrollView>

</LinearLayout>